--- a/.tekton/openshift-gitops-fbc-pull-request.yaml
+++ b/.tekton/openshift-gitops-fbc-pull-request.yaml
@@ -30,7 +30,9 @@ spec:
     value:
     - linux/x86_64
   - name: dockerfile
-    value: catalog/v4.17/Dockerfile
+    value: Dockerfile
+  - name: path-context
+    value: catalog/v4.17
   pipelineSpec:
     description: |
       This pipeline is ideal for building and verifying [file-based catalogs](https://konflux-ci.dev/docs/advanced-how-tos/building-olm.adoc#building-the-file-based-catalog).
