--- a/catalog/v4.17/openshift-gitops-operator/catalog.yaml
+++ b/catalog/v4.17/openshift-gitops-operator/catalog.yaml
@@ -1,5 +1,5 @@
 ---
-defaultChannel: stable-v1.16
+defaultChannel: gitops-1.16
 name: openshift-gitops-operator
 schema: olm.package
 ---
@@ -210,7 +210,7 @@ entries:
   skips:
   - openshift-gitops-operator.v1.15.1
   - openshift-gitops-operator.v1.16.0-0.1746014725.p
-name: stable-v1
+name: gitops-1
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -221,7 +221,7 @@ entries:
   skips:
   - openshift-gitops-operator.v1.1.0
   - openshift-gitops-operator.v1.1.1
-name: stable-v1.1
+name: gitops-1.1
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -240,7 +240,7 @@ entries:
   - openshift-gitops-operator.v1.10.3
   - openshift-gitops-operator.v1.10.4
   - openshift-gitops-operator.v1.10.5
-name: stable-v1.10
+name: gitops-1.10
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -261,7 +261,7 @@ entries:
   - openshift-gitops-operator.v1.11.4
   - openshift-gitops-operator.v1.11.5
   - openshift-gitops-operator.v1.11.6
-name: stable-v1.11
+name: gitops-1.11
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -280,7 +280,7 @@ entries:
   - openshift-gitops-operator.v1.12.3
   - openshift-gitops-operator.v1.12.4
   - openshift-gitops-operator.v1.12.5-0.1727371523.p
-name: stable-v1.12
+name: gitops-1.12
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -293,7 +293,7 @@ entries:
   - openshift-gitops-operator.v1.13.0
   - openshift-gitops-operator.v1.13.1
   - openshift-gitops-operator.v1.13.2
-name: stable-v1.13
+name: gitops-1.13
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -306,7 +306,7 @@ entries:
   - openshift-gitops-operator.v1.14.0
   - openshift-gitops-operator.v1.14.1
   - openshift-gitops-operator.v1.14.2-0.1738140086.p
-name: stable-v1.14
+name: gitops-1.14
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -315,7 +315,7 @@ entries:
 - name: openshift-gitops-operator.v1.15.1
   skips:
   - openshift-gitops-operator.v1.15.0-0.1738074324.p
-name: stable-v1.15
+name: gitops-1.15
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -324,7 +324,7 @@ entries:
 - name: openshift-gitops-operator.v1.16.1
   skips:
   - openshift-gitops-operator.v1.16.0-0.1746014725.p
-name: stable-v1.16
+name: gitops-1.16
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -339,7 +339,7 @@ entries:
   - openshift-gitops-operator.v1.2.1
   - openshift-gitops-operator.v1.2.2
   - openshift-gitops-operator.v1.2.3
-name: stable-v1.2
+name: gitops-1.2
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -374,7 +374,7 @@ entries:
   - openshift-gitops-operator.v1.3.11
   - openshift-gitops-operator.v1.3.12
   - openshift-gitops-operator.v1.3.13
-name: stable-v1.3
+name: gitops-1.3
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -407,7 +407,7 @@ entries:
   - openshift-gitops-operator.v1.4.10
   - openshift-gitops-operator.v1.4.11
   - openshift-gitops-operator.v1.4.12-0.1664821688.p
-name: stable-v1.4
+name: gitops-1.4
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -434,7 +434,7 @@ entries:
   - openshift-gitops-operator.v1.5.7
   - openshift-gitops-operator.v1.5.8
   - openshift-gitops-operator.v1.5.9
-name: stable-v1.5
+name: gitops-1.5
 package: openshift-gitops-operator
 schema: olm.channel
 ---
@@ -445,25 +445,25 @@ entries:
   skips:
   - openshift-gitops-operator.v1.6.0
   - openshift-gitops-operator.v1.6.1-0.1666124167.p
-name: stable-v1.6
+name: gitops-1.6
 package: openshift-gitops-operator
 schema: olm.channel
 ---
 entries:
 - name: openshift-gitops-operator.v1.7.4-0.1690486082.p
-name: stable-v1.7
+name: gitops-1.7
 package: openshift-gitops-operator
 schema: olm.channel
 ---
 entries:
 - name: openshift-gitops-operator.v1.8.6
-name: stable-v1.8
+name: gitops-1.8
 package: openshift-gitops-operator
 schema: olm.channel
 ---
 entries:
 - name: openshift-gitops-operator.v1.9.4
-name: stable-v1.9
+name: gitops-1.9
 package: openshift-gitops-operator
 schema: olm.channel
 ---
